--- a/tetris/src/App.css
+++ b/tetris/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   background: url('./img/bg.png') #000;
   background-size: cover;
   overflow: hidden;
