--- a/tetris/src/App.css
+++ b/tetris/src/App.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: url('./img/bg.png') #000;
+  background: url('./img/galaktika.jpg') #000;
   background-size: cover;
   overflow: hidden;
   height: 100vh;
